--- a/CapaVista/CapaVista.csproj
+++ b/CapaVista/CapaVista.csproj
@@ -90,12 +90,6 @@
     <Compile Include="FrmModUsuarios.Designer.cs">
       <DependentUpon>FrmModUsuarios.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmPR.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FrmPR.Designer.cs">
-      <DependentUpon>FrmPR.cs</DependentUpon>
-    </Compile>
     <Compile Include="Frm_AdminHome.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,6 +108,12 @@
     <Compile Include="Frm_Registro.Designer.cs">
       <DependentUpon>Frm_Registro.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmGestionPR.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmGestionPR.Designer.cs">
+      <DependentUpon>FrmGestionPR.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CV_Seguridad.cs" />
@@ -129,9 +129,6 @@
     <EmbeddedResource Include="FrmModUsuarios.resx">
       <DependentUpon>FrmModUsuarios.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmPR.resx">
-      <DependentUpon>FrmPR.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Frm_AdminHome.resx">
       <DependentUpon>Frm_AdminHome.cs</DependentUpon>
     </EmbeddedResource>
@@ -140,6 +137,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_Registro.resx">
       <DependentUpon>Frm_Registro.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmGestionPR.resx">
+      <DependentUpon>FrmGestionPR.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
