--- a/CapaVista/CapaVista.csproj
+++ b/CapaVista/CapaVista.csproj
@@ -193,5 +193,8 @@
   <ItemGroup>
     <None Include="Resources\SignoMasFinal.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\SIGNO REFRESCAR.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
