--- a/CapaVista/CapaVista.csproj
+++ b/CapaVista/CapaVista.csproj
@@ -84,6 +84,24 @@
     <Compile Include="FrmCargarMarcas.Designer.cs">
       <DependentUpon>FrmCargarMarcas.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmGestionDevoluciones.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmGestionDevoluciones.Designer.cs">
+      <DependentUpon>FrmGestionDevoluciones.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmGestionMedidas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmGestionMedidas.Designer.cs">
+      <DependentUpon>FrmGestionMedidas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmGestionOrdenCompra.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmGestionOrdenCompra.Designer.cs">
+      <DependentUpon>FrmGestionOrdenCompra.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmGestionPedidoCotizaciones.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,11 +126,35 @@
     <Compile Include="FrmGestionProveedores.Designer.cs">
       <DependentUpon>FrmGestionProveedores.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmGestionRecepcion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmGestionRecepcion.Designer.cs">
+      <DependentUpon>FrmGestionRecepcion.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmModUsuarios.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmModUsuarios.Designer.cs">
       <DependentUpon>FrmModUsuarios.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmNuevaCate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmNuevaCate.Designer.cs">
+      <DependentUpon>FrmNuevaCate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmNuevaMarca.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmNuevaMarca.Designer.cs">
+      <DependentUpon>FrmNuevaMarca.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmNuevaMedida.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmNuevaMedida.Designer.cs">
+      <DependentUpon>FrmNuevaMedida.cs</DependentUpon>
     </Compile>
     <Compile Include="Frm_AdminHome.cs">
       <SubType>Form</SubType>
@@ -138,6 +180,12 @@
     <Compile Include="FrmGestionPR.Designer.cs">
       <DependentUpon>FrmGestionPR.cs</DependentUpon>
     </Compile>
+    <Compile Include="GestionProveedores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GestionProveedores.Designer.cs">
+      <DependentUpon>GestionProveedores.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CV_Seguridad.cs" />
@@ -149,6 +197,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmCargarMarcas.resx">
       <DependentUpon>FrmCargarMarcas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmGestionDevoluciones.resx">
+      <DependentUpon>FrmGestionDevoluciones.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmGestionMedidas.resx">
+      <DependentUpon>FrmGestionMedidas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmGestionOrdenCompra.resx">
+      <DependentUpon>FrmGestionOrdenCompra.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmGestionPedidoCotizaciones.resx">
       <DependentUpon>FrmGestionPedidoCotizaciones.cs</DependentUpon>
@@ -162,8 +219,20 @@
     <EmbeddedResource Include="FrmGestionProveedores.resx">
       <DependentUpon>FrmGestionProveedores.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmGestionRecepcion.resx">
+      <DependentUpon>FrmGestionRecepcion.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmModUsuarios.resx">
       <DependentUpon>FrmModUsuarios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmNuevaCate.resx">
+      <DependentUpon>FrmNuevaCate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmNuevaMarca.resx">
+      <DependentUpon>FrmNuevaMarca.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmNuevaMedida.resx">
+      <DependentUpon>FrmNuevaMedida.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_AdminHome.resx">
       <DependentUpon>Frm_AdminHome.cs</DependentUpon>
@@ -176,6 +245,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmGestionPR.resx">
       <DependentUpon>FrmGestionPR.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GestionProveedores.resx">
+      <DependentUpon>GestionProveedores.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
