--- a/CapaEntities/CapaEntities.csproj
+++ b/CapaEntities/CapaEntities.csproj
@@ -47,6 +47,8 @@
     <Compile Include="ProductoNuevo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proveedor.cs" />
+    <Compile Include="UsuarioActual.cs" />
+    <Compile Include="UsuarioNuevo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
