--- a/CapaVista/CapaVista.csproj
+++ b/CapaVista/CapaVista.csproj
@@ -72,6 +72,12 @@
     <Compile Include="FrmAdmusuarios.Designer.cs">
       <DependentUpon>FrmAdmusuarios.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmBitacora.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmBitacora.Designer.cs">
+      <DependentUpon>FrmBitacora.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmCargarCategorias.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,6 +89,12 @@
     </Compile>
     <Compile Include="FrmCargarMarcas.Designer.cs">
       <DependentUpon>FrmCargarMarcas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmComprobante.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmComprobante.Designer.cs">
+      <DependentUpon>FrmComprobante.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmFacturaRemito.cs">
       <SubType>Form</SubType>
@@ -162,23 +174,29 @@
     <Compile Include="FrmNuevaMedida.Designer.cs">
       <DependentUpon>FrmNuevaMedida.cs</DependentUpon>
     </Compile>
-    <Compile Include="Frm_AdminHome.cs">
+    <Compile Include="FrmAdminHome.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Frm_AdminHome.Designer.cs">
-      <DependentUpon>Frm_AdminHome.cs</DependentUpon>
+    <Compile Include="FrmAdminHome.Designer.cs">
+      <DependentUpon>FrmAdminHome.cs</DependentUpon>
     </Compile>
-    <Compile Include="Frm_Login.cs">
+    <Compile Include="FrmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Frm_Login.Designer.cs">
-      <DependentUpon>Frm_Login.cs</DependentUpon>
+    <Compile Include="FrmLogin.Designer.cs">
+      <DependentUpon>FrmLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="Frm_Registro.cs">
+    <Compile Include="FrmPagos.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Frm_Registro.Designer.cs">
-      <DependentUpon>Frm_Registro.cs</DependentUpon>
+    <Compile Include="FrmPagos.Designer.cs">
+      <DependentUpon>FrmPagos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmRegistro.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmRegistro.Designer.cs">
+      <DependentUpon>FrmRegistro.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmGestionPR.cs">
       <SubType>Form</SubType>
@@ -192,17 +210,29 @@
     <Compile Include="GestionProveedores.Designer.cs">
       <DependentUpon>GestionProveedores.cs</DependentUpon>
     </Compile>
+    <Compile Include="PlantillaDetalle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PlantillaDetalle.Designer.cs">
+      <DependentUpon>PlantillaDetalle.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CV_Seguridad.cs" />
     <EmbeddedResource Include="FrmAdmusuarios.resx">
       <DependentUpon>FrmAdmusuarios.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmBitacora.resx">
+      <DependentUpon>FrmBitacora.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmCargarCategorias.resx">
       <DependentUpon>FrmCargarCategorias.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmCargarMarcas.resx">
       <DependentUpon>FrmCargarMarcas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmComprobante.resx">
+      <DependentUpon>FrmComprobante.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmFacturaRemito.resx">
       <DependentUpon>FrmFacturaRemito.cs</DependentUpon>
@@ -243,20 +273,26 @@
     <EmbeddedResource Include="FrmNuevaMedida.resx">
       <DependentUpon>FrmNuevaMedida.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Frm_AdminHome.resx">
-      <DependentUpon>Frm_AdminHome.cs</DependentUpon>
+    <EmbeddedResource Include="FrmAdminHome.resx">
+      <DependentUpon>FrmAdminHome.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Frm_Login.resx">
-      <DependentUpon>Frm_Login.cs</DependentUpon>
+    <EmbeddedResource Include="FrmLogin.resx">
+      <DependentUpon>FrmLogin.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Frm_Registro.resx">
-      <DependentUpon>Frm_Registro.cs</DependentUpon>
+    <EmbeddedResource Include="FrmPagos.resx">
+      <DependentUpon>FrmPagos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmRegistro.resx">
+      <DependentUpon>FrmRegistro.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmGestionPR.resx">
       <DependentUpon>FrmGestionPR.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GestionProveedores.resx">
       <DependentUpon>GestionProveedores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PlantillaDetalle.resx">
+      <DependentUpon>PlantillaDetalle.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
