--- a/CapaVista/CapaVista.csproj
+++ b/CapaVista/CapaVista.csproj
@@ -72,6 +72,30 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CV_Utiles.cs" />
+    <Compile Include="FrmEditarProducto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmEditarProducto.Designer.cs">
+      <DependentUpon>FrmEditarProducto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmNuevoProducto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmNuevoProducto.Designer.cs">
+      <DependentUpon>FrmNuevoProducto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmNotaCredito.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmNotaCredito.Designer.cs">
+      <DependentUpon>FrmNotaCredito.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmGestionProductos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmGestionProductos.Designer.cs">
+      <DependentUpon>FrmGestionProductos.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI_Utilidad.cs" />
     <Compile Include="FrmDetalleRecepcion.cs">
       <SubType>Form</SubType>
@@ -132,12 +156,6 @@
     </Compile>
     <Compile Include="FrmGestionPedidoCotizaciones.Designer.cs">
       <DependentUpon>FrmGestionPedidoCotizaciones.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FrmGestionProductos.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FrmGestionProductos.Designer.cs">
-      <DependentUpon>FrmGestionProductos.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmCargarTipoProducto.cs">
       <SubType>Form</SubType>
@@ -220,6 +238,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CV_Seguridad.cs" />
+    <EmbeddedResource Include="FrmEditarProducto.resx">
+      <DependentUpon>FrmEditarProducto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmNuevoProducto.resx">
+      <DependentUpon>FrmNuevoProducto.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmDetalleRecepcion.resx">
       <DependentUpon>FrmDetalleRecepcion.cs</DependentUpon>
     </EmbeddedResource>
@@ -241,6 +265,12 @@
     <EmbeddedResource Include="FrmComprobante.resx">
       <DependentUpon>FrmComprobante.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmNotaCredito.resx">
+      <DependentUpon>FrmNotaCredito.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmGestionProductos.resx">
+      <DependentUpon>FrmGestionProductos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmRemito.resx">
       <DependentUpon>FrmRemito.cs</DependentUpon>
     </EmbeddedResource>
@@ -249,9 +279,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmGestionPedidoCotizaciones.resx">
       <DependentUpon>FrmGestionPedidoCotizaciones.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FrmGestionProductos.resx">
-      <DependentUpon>FrmGestionProductos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmCargarTipoProducto.resx">
       <DependentUpon>FrmCargarTipoProducto.cs</DependentUpon>
@@ -460,6 +487,78 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\vaso.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\8462238.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\84622381.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\administrar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Alan_turing_header.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\caja-de-entrega.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cotizacion.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\exit1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\factura.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-idioma-50.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-idioma-64 %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-idioma-64.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\idioma.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\idiomas.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\lapiz.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\metodo-de-pago %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pedido.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pedido1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\square.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\square1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\traduccion.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\traductor-online.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\translate.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\usuario1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\usuario2.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
