--- a/CapaVista/CapaVista.csproj
+++ b/CapaVista/CapaVista.csproj
@@ -72,6 +72,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CV_Utiles.cs" />
+    <Compile Include="FrmAltaUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmAltaUsuario.Designer.cs">
+      <DependentUpon>FrmAltaUsuario.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmEditarProducto.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -101,6 +107,12 @@
     </Compile>
     <Compile Include="FrmPerfil.Designer.cs">
       <DependentUpon>FrmPerfil.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmRecupero.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmRecupero.Designer.cs">
+      <DependentUpon>FrmRecupero.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmSidebar.cs">
       <SubType>Form</SubType>
@@ -240,12 +252,6 @@
     <Compile Include="FrmPagos.Designer.cs">
       <DependentUpon>FrmPagos.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmRegistro.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FrmRegistro.Designer.cs">
-      <DependentUpon>FrmRegistro.cs</DependentUpon>
-    </Compile>
     <Compile Include="FrmGestionPR.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -261,6 +267,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CV_Seguridad.cs" />
+    <EmbeddedResource Include="FrmAltaUsuario.resx">
+      <DependentUpon>FrmAltaUsuario.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmEditarProducto.resx">
       <DependentUpon>FrmEditarProducto.cs</DependentUpon>
     </EmbeddedResource>
@@ -296,6 +305,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmPerfil.resx">
       <DependentUpon>FrmPerfil.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmRecupero.resx">
+      <DependentUpon>FrmRecupero.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmRemito.resx">
       <DependentUpon>FrmRemito.cs</DependentUpon>
@@ -335,9 +347,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmPagos.resx">
       <DependentUpon>FrmPagos.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FrmRegistro.resx">
-      <DependentUpon>FrmRegistro.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmGestionPR.resx">
       <DependentUpon>FrmGestionPR.cs</DependentUpon>
@@ -610,6 +619,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\ChatGPT Image 3 sept 2025, 23_41_43.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Imagen_Usuario.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
