--- a/CapaVista/CapaVista.csproj
+++ b/CapaVista/CapaVista.csproj
@@ -71,6 +71,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CV_ConfigSistema.cs" />
     <Compile Include="FrmComprobanteVenta.cs">
       <SubType>Form</SubType>
     </Compile>
